# superApp

./: .gitignore  README.md  build.gradle  channel.txt  gradle.properties  readme.md  settings.gradle
module_util/: CMakeLists.txt  build.gradle
module_util/src/main/: AndroidManifest.xml
module_util/src/main/assets/: 404.html  jsbridgedemo.html  test.html
module_util/src/main/cpp/: jniDemo.cpp  jniDemo2.cpp
module_util/src/main/java/debug/: LauncherActivity.java  UtilApplication.java
module_util/src/main/module/: AndroidManifest.xml
module_util/src/main/res/drawable/: camera_select_circle.xml  camera_shape_gray_circle.xml  camera_shape_white_circle.xml  camera_shape_white_ring.xml  shape_line_dashed.xml  shape_rect_dashed_border_fill.xml  shape_rect_rounded_ar.xml  shape_rect_rounded_arc.xml  shape_rect_rounded_border_fill.xml  shape_rect_rounded_left_arc.xml  shape_rect_rounded_left_right_arc_border.xml  shape_rect_solid_fill_arc.xml  shape_rect_solid_fill_bottom_left_right.xml  shape_rect_solid_fill_top_left_right.xml
module_util/src/main/res/layout/: module_util_activity_main.xml  module_util_activity_webview_jsbridge.xml  module_util_fragment_aidl.xml  module_util_fragment_aop.xml  module_util_fragment_bluetooth.xml  module_util_fragment_camera.xml  module_util_fragment_cartoon.xml  module_util_fragment_cartoon_animator.xml  module_util_fragment_goods.xml  module_util_fragment_hook.xml  module_util_fragment_jni.xml  module_util_fragment_livedata.xml  module_util_fragment_main.xml  module_util_fragment_normalwebview.xml  module_util_fragment_room.xml  (+17 more)
(+1538 files in other folders)
